--- a/javascript.html
+++ b/javascript.html
@@ -19,6 +19,7 @@
       let calculation = (2096 + 799) / 100;
       console.log(`The calculation is: $${calculation}`);
     </script>
+    <data value=""></data>
   </body>
 </html>
 
