--- a/boolExersice.html
+++ b/boolExersice.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   <script>
-    let hours = 15;
+    let hours = 22;
     let name = 'Elvis'
-    let age = '70';
-    const isHoliday = true;
+    let age = '10';
+    const isHoliday = false;
     if (hours < 12) {
       console.log(alert(`Good Morning! ${name}`));
-    } else if (hours > 12 || hours < 18) {
+    } else if (hours > 12 && hours < 18) {
       console.log(alert(`Good Afternoon! ${name}`));
     } else {
       console.log(alert(`Good Evening! ${name}`));
