--- a/calculator.html
+++ b/calculator.html
@@ -32,6 +32,8 @@
       <button onclick="calculate('r')">reaveal calculation</button>
     </P>
 
+    <p class="js-result"></p>
+
       
 
     <script src="javascript2.js"></script>
